compositing/masks/compositing-clip-path-mask-change.html is failing for ports using TextureMapper https://bugs.webkit.org/show_bug.cgi?id=236323

Reviewed by Don Olmstead.

Source/WebCore:

Apple ports don't have this issue because GraphicsLayerCA support
Shape layer for clip-path.

The painting phase of the existing mask layer should be updated if
clip-path or mask are changed.

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateMaskingLayer):

LayoutTests:

* platform/gtk/TestExpectations:



Canonical link: https://commits.webkit.org/247035@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289497 268f45cc-cd09-0410-ab3c-d52691b4dbfc